Added filters to get tasks
Added swagger doc

README updated
